sass 7-1 folders. Html responsive (bootstrap classes). Gallery src images.

--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -3,7 +3,7 @@ $gray: #808080;
 $bluesky:#92dce5;
 $red: #ef6461;
 
-// font
+// font family
 $montserrat: 'Montserrat', sans-serif;
 $poppins: 'Poppins', sans-serif;
 
