--- a/assets/sass/components/_buttons.scss
+++ b/assets/sass/components/_buttons.scss
@@ -1,1 +1,18 @@
-//This file you will create your style for buttons inside of the project
+.btns-profile{
+   color: $white;
+   padding: 0.5rem ;
+   font-size: $regular;
+   font-family: $montserrat;
+   border: 0;
+   &.btn-msg{
+      background-color: $bluesky;
+   }
+   
+   &.btn-flw{
+      background-color: $red;    
+   }
+   @include media-breakpoint-up(md){
+      padding: 0.8rem;
+   }
+
+}
