--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -1,9 +1,56 @@
 .banner{
    width: 100%;
-   height: 6.25rem;
+   height: 8rem;
    overflow: hidden;
    background-image: url(../img/image-banner.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
+}
+
+.profile{
+   min-height: 8rem;
+   border-bottom: 1px solid $gray;
+   display: inline-flex;
+   width: 100%;
+   align-items: center;
+   @include media-breakpoint-down(sm){
+      text-align: center;
+   }   
+
+   .profile__thumbnail{
+      font-family: $montserrat;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      
+      &--img{
+         border-radius: 50%;
+         width: 6rem;
+         height: 6rem;
+         margin: 1rem;
+      }
+      &--info{
+         text-align: start;
+         h5{
+            font-weight: $bold;
+            font-size: $medium;
+         }
+         p{
+            color: $gray;
+            font-weight: $small;
+         }
+      }
+      &--btns{
+         display: flex;
+         align-items: center;
+         justify-content: flex-end;
+         button{
+            margin-left: 0.5rem;
+         }
+         @include media-breakpoint-down(sm){
+            display: none;
+         }
+      }
+   }
 }
