--- a/assets/sass/layout/_navigation.scss
+++ b/assets/sass/layout/_navigation.scss
@@ -1,1 +1,6 @@
-//This file is for create your style with relation on space of navbar
+.nav-link{
+   i{
+      font-size: $large;
+      margin: 1rem;
+   }
+}
